--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -2,7 +2,7 @@
   background-color: white;
   width: 100%;
   transition: 0.4s;
-  position: fixed;
+  position: relative;
   .LogoContainer{
     transition: 0.4s;
     padding: 38px 0;
@@ -49,6 +49,7 @@
     &.Opened{
       background-color: white;
     }
+    z-index: 99999;
     position: fixed;
     background-color: #ffffffe3;
     transition:  0.3s ;
@@ -111,5 +112,21 @@
   width: 100%;
   a{
     cursor: pointer;
+  }
+}
+
+.FooterLayout{
+  padding: 70px 0px 0px 0px;
+  background: #D9D9D9;
+  .FooterMap{
+    border-left: solid black 2px;
+  }
+  .Copy{
+    text-align: center;
+    font-family: Roboto;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
   }
 }
