--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -26,3 +26,21 @@
     margin-bottom: 0px;
   }
 }
+
+.TrendingTopicSection{
+  width: 100%;
+  height: 383px;
+  max-width: 310px;
+  padding: 16px;
+  flex-shrink: 0;
+  border-radius: 16px;
+  background: #F3F3F2;
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
+
+  .TrendingLink{
+    .TrendingButton{
+      float: right;
+    }
+  }
+    
+  }
