--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -2,7 +2,6 @@
   width: 100%;
   height: 79vh;
   position: relative;
-   
 }
 
 .FullContainer{
@@ -38,4 +37,35 @@
     font-weight: 400;
     line-height: 140%; /* 28px */
   }
+}
+.TrendingText{
+  width: 30%;
+  float: left;
+  color: var(--Colors-Pure-Black, #000);
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 140%; /* 28px */
+  margin-top: 60px;
+  z-index: 999;
+}
+.TitleWithIcon{
+  display: flex;
+  gap: 5px;
+  font-family: "Roboto Serif";
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+
+.TrandingAndFeatured{
+  background-image: url('/local/png/home-gradient.png');
+  background-color: white;
+  min-height: 100vh;
+  background-size: cover;
+  background-position: center center;
+  float: left;
+  width: 100%;
 }
