--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -44,3 +44,168 @@
   }
     
   }
+
+  .StoreisSection{
+    width: 100%;
+    height: 50%;
+    min-height: 250px;
+    padding: 10px 5px;
+    &.main{
+      height: 100%;
+      min-height: 500px;
+      .StoreisSectionContainer{
+        .Content{
+          width: 60%;
+          padding: 20px 40px;
+          h2{
+            
+            font-size: 28px;
+          }
+          
+        }
+      }
+    }
+    
+    .StoreisSectionContainer{
+      width: 100%;
+      height: 100%;
+      background-size: 150%;
+      transition: 3s ease-in-out;
+      background-repeat: no-repeat;
+      background-position: center center;
+      border-radius: 16px;
+      box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
+      position: relative;
+      &:hover{
+        background-size: 200%;
+      }
+      >div{
+        z-index: 10;
+      }
+      .Content{
+        padding: 20px;
+        color:white;
+        h2{
+          margin:0px;
+          color: #FFF;
+          font-size: 22px;
+          font-family: "Roboto Serif";
+          font-style: normal;
+          font-weight: 700;
+        }
+        p{
+          margin:0px;
+          color: #FFF;
+          font-family: Roboto;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 300;
+          line-height: 160%; /* 25.6px */
+        }
+      }
+    }
+  }
+
+  .EventsSection{
+    color: white;
+    width: 100%;
+    float: left;
+    display: flex;
+    min-height: 512px;
+    background-size: cover;
+    background-position: center center;
+    mix-blend-mode: multiply;
+    .EventsContent{
+      h2{
+        color: white;
+        font-family: "Roboto Serif";
+        font-size: 26px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 120%;
+      }
+      p{
+        color: white;
+        font-family: Roboto;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 160%; /* 25.6px */
+      }
+      width: 45%;
+      height: 100%;
+      button{
+        font-weight: 400;
+      }
+    }
+  }
+
+  .NewsItem{
+    cursor: pointer;
+    border-radius: 16px;
+    background:  #F3F3F2;
+    box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
+    transition: 0.5s;
+    &:hover{
+      box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.45);
+    }
+    max-width: 313px;
+    min-height: 475px;
+    padding: 12px;
+    .NewsImage{
+      width: 100%;
+      height: 147px;
+      border-radius: 8px;
+      background-position: center center;
+      background-size: cover;
+    }
+    .NewsContent{
+      flex: 1;
+      p{
+        margin-top: 15px;
+        margin-bottom: 10px;
+      }
+      h3{
+        margin: 0px;
+        font-family: "Roboto Serif";
+        font-size: 22px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 120%; 
+      }
+    }
+  }
+
+
+  .NewsletterSection{
+    width: 100%;
+    min-height: 214px;
+    background-color: #0073A8;
+    h4{
+      color: #FFF;
+      font-family: "Roboto Serif";
+      font-size: 26px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 120%; /* 31.2px */
+      margin:0;
+    }
+    h5{
+      margin:0;
+      color: #FFF;
+      font-family: Roboto;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 300;
+      line-height: normal;
+      margin-bottom: 16px;
+    }
+    button{
+      font-weight: 400;
+    }
+    .NewsImageBg{
+      width: 100%;
+      height: 100%;
+      background-color: red;
+    }
+  }
