--- a/src/styles/components/forms.module.scss
+++ b/src/styles/components/forms.module.scss
@@ -1,6 +1,12 @@
 .SearchForm{
   width: 100%;
   height: 100%;
+  form{
+    width: 60%;
+    @media (max-width: '750px') {
+      width: 100%;
+    }
+  }
   h2{
     color: #FAFAFA;
     font-family: "Roboto Serif", serif;
