--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -7,7 +7,8 @@
   background-color: rgba(217, 217, 217, 0.20);
   border: solid #7bb4ce 2px;
   border-radius: 20px;
-  min-width: 240px;
+  min-width: 260px;
+  max-width: 260px;
   transition: 0.5s;
   &:hover{
     backdrop-filter: blur(5px);
@@ -27,9 +28,65 @@
   }
 }
 
+.HeroHeader{
+  min-height: 60vh;
+  padding: 60px 0px;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  color: white;
+  float: left;
+  width: 100%;
+  h2{
+    padding-left: 40px;
+    background-image: url('../../../public/local/svg/simbol.svg');
+    background-position: left center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    color: #FFF;
+    font-family: "Roboto Serif";
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    max-width: 50vw;
+    @media (max-width: '750px') {
+      width: 100%;
+    }
+  }
+  h1{
+    color: #FFF;
+    font-family: "Roboto Serif";
+    font-size: 46px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%; /* 55.2px */
+    max-width:40vw;
+    @media (max-width: '750px') {
+      width: 100%;
+    }
+  }
+  .Excerpt{
+    max-width: 55vw;
+    @media (max-width: '750px') {
+      width: 100%;
+    }
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 160%; /* 41.6px */
+  }
+  .HeroContent{
+    height: 70vh;
+  }
+}
+
 .TrendingTopicSection{
   width: 100%;
   height: 383px;
+  min-width: 310px;
   max-width: 310px;
   padding: 16px;
   flex-shrink: 0;
@@ -140,8 +197,12 @@
     }
   }
 
+
   .NewsItem{
+    text-decoration: none;
+    
     cursor: pointer;
+    width: 100%;
     border-radius: 16px;
     background:  #F3F3F2;
     box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
@@ -219,4 +280,17 @@
       background-size: cover;
       background-repeat: no-repeat;
     }
+
+
+
+  }
+
+  .TitleWithIcon{
+    display: flex;
+    gap: 5px;
+    font-family: "Roboto Serif";
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
   }
