--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -36,6 +36,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: 140%; /* 28px */
+    max-width: 700px;
+    margin:3px
   }
 }
 .TrendingText{
