--- a/src/styles/components/forms.module.scss
+++ b/src/styles/components/forms.module.scss
@@ -8,6 +8,9 @@
     }
   }
   h2{
+    @media (max-width: '750px') {
+      font-size: 25px;
+    }
     color: #FAFAFA;
     font-family: "Roboto Serif", serif;
     font-size: 42px;
