--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -2,6 +2,9 @@
   width: 100%;
   height: 79vh;
   position: relative;
+  @media (max-width: '750px') {
+    height: 86vh;
+  }
 }
 
 .FullContainer{
@@ -27,6 +30,9 @@
     font-weight: 800;
     line-height: normal;
     color: white;
+    @media (max-width: '750px') {
+      flex-direction: column;
+    }
   }
   h4{
     color: white;
@@ -40,8 +46,20 @@
     margin:3px
   }
 }
+.TrandingAndFeaturedContainer{
+  height: 650px;
+  @media (max-width: '750px') {
+    height: 850px;
+  }
+}
 .TrendingText{
   width: 30%;
+  @media (max-width: '750px') {
+    width: 100%;
+    margin-top: 0px;
+    text-align: center;
+    float: left;
+  }
   float: left;
   color: var(--Colors-Pure-Black, #000);
   font-family: Roboto;
@@ -53,6 +71,11 @@
   z-index: 999;
 }
 .TitleWithIcon{
+  @media (max-width: '750px') {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   display: flex;
   gap: 5px;
   font-family: "Roboto Serif";
