--- a/src/styles/pages/pages.module.scss
+++ b/src/styles/pages/pages.module.scss
@@ -1,22 +1,28 @@
 .PostTitle{
   color: #006CB0;
-font-family: "Roboto Serif";
-font-size: 46px;
-font-style: normal;
-font-weight: 700;
-line-height: 120%; /* 55.2px */
+  font-family: "Roboto Serif";
+  font-size: 46px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 55.2px */
+  @media (max-width: '750px') {
+    font-size: 28px;
+  }
 }
 .PostSubtitle{
   color: var(--Colors-Pure-Black, #000);
-font-family: Roboto;
-font-size: 26px;
-font-style: normal;
-font-weight: 400;
-line-height: 160%; /* 41.6px */
+  font-family: Roboto;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 41.6px */
+  @media (max-width: '750px') {
+    font-size: 24px;
+  }
 }
 .PostFeaturedImage{
   width: 100%;
-  height: 500px;
+  height: 400px;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -65,6 +71,7 @@ line-height: 160%; /* 41.6px */
 .PostContent{
   img{
     max-width: 100%;
+    height: auto;
   }
   figure{
     max-width: 100% ;
