--- a/src/styles/components/video.module.scss
+++ b/src/styles/components/video.module.scss
@@ -34,3 +34,77 @@
   z-index: 2;
   position: relative;
 }
+
+.RelatedVideosSection{
+  width: 100%;
+  padding: 60px 0px;
+  background: #D5D5D5;
+}
+
+.LinkVideoItem{
+  text-decoration: none;
+  color:black;
+}
+.VideoItem{
+  background-color: white;
+  padding:24px;
+  border-radius:16px ;
+  gap: 20px;
+  position: relative;
+  &.Main{
+    &::before{
+      content: "";
+      width: 70px;
+      height: 70px;
+      z-index: 99999;
+      background-image: url('../../../public/local/svg/play.svg');
+      background-size: 100%;
+      background-repeat: no-repeat;
+      background-position: center center;
+      position: absolute;
+      left: 50%;
+      top: 45%;
+      transform: translate(-50%, -50%);
+    }
+    gap:0;
+    .VideoThumb{
+      width: 100%;
+      height: 380px;
+      border-radius: 8px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+    }
+    p{
+      color: var(--Colors-Pure-Black, #000);
+      font-family: "Roboto Serif";
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+      margin: 0px;
+      margin-top: 20px;
+    }
+  }
+  .VideoThumb{
+    width: 400px;
+    height: 175px;
+    border-radius: 8px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    @media (max-width: '750px') {
+      width: 100%;
+    }
+  }
+  
+  p{
+    color: var(--Colors-Pure-Black, #000);
+    font-family: "Roboto Serif";
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin: 0px;
+  }
+}
