fix: trending topics slider - change: get image url for hero slider, from acf. No need to fetch each image anymore

--- a/src/styles/components/slider.module.scss
+++ b/src/styles/components/slider.module.scss
@@ -54,7 +54,7 @@
 }
 .TrandingSlider{
   position: absolute;
-  right: -20px;
+  left: 0px;
   .SliderItemContainer{
     overflow: visible;
     padding: 15px;
