--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -60,7 +60,7 @@
     background-repeat: no-repeat;
     color: #FFF;
     font-family: "Roboto Serif";
-    font-size: 26px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 800;
     line-height: normal;
@@ -72,11 +72,11 @@
   h1{
     color: #FFF;
     font-family: "Roboto Serif";
-    font-size: 46px;
+    font-size: 40px;
     font-style: normal;
     font-weight: 700;
     line-height: 120%; /* 55.2px */
-    max-width:40vw;
+    max-width:45vw;
     @media (max-width: '750px') {
       width: 100%;
     }
@@ -193,6 +193,10 @@
         font-style: normal;
         font-weight: 300;
         line-height: 160%; /* 25.6px */
+      }
+      a{
+        color: white;
+        text-decoration: none;
       }
     }
   }
