--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -453,3 +453,49 @@
   background: #F3F3F2;
   min-height: 400px;
 }
+
+.EvidenceMapItem{
+  border-radius: 16px;
+  background: var(--Greyscale-Surface-Default, #F3F3F2);
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
+  a{
+    text-decoration: none;
+    color: white;
+  }
+  h3{
+    width: 100%;
+    color: var(--Colors-Pure-Black, #000);
+    font-family: "Roboto Serif";
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%; /* 26.4px */
+  }
+  p{
+    color: var(--Colors-Pure-Black, #000);
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 160%; /* 25.6px */
+  }
+}
+
+.EvidenceMapsSection{
+  width: 100%;
+  float: left;
+  background: #D5D5D5;
+}
+
+.MoreLink{
+  float: right;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  text-decoration: none;
+  color:#0C2B64;
+  font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
