--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -205,3 +205,68 @@
     line-height: normal;
   }
 }
+
+.MegaMenuOverlay{
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  z-index: 99;
+  background-color: red;
+  .MegaMenu{
+    padding: 30px 70px;
+    border-radius: 0px 0px 16px 16px;
+    box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
+    position: absolute;
+    background: #F6F6F6;
+    left: 20%;
+    width: 60%;
+    min-height: 40vh;
+    h2{
+      color: var(--Colors-Pure-Black, #000);
+      font-family: "Roboto Serif";
+      font-size: 28px;
+      font-style: normal;
+      margin: 0;
+      font-weight: 700;
+      line-height: 160%; /* 51.2px */
+      text-align: center;
+    }
+    nav{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 0;
+      margin-top: 20px;
+      border-right: solid black 1px;
+      padding-right: 20px;
+      a{
+        padding:15px 5px;
+        text-transform: uppercase;
+        color: var(--Colors-Pure-Black, #000);
+        text-align: right;
+        font-family: Roboto;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+        cursor: pointer;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        width: 100%;
+        align-items: center;
+        justify-content: flex-end;
+        &:hover{
+          background-color: #e9e9e78b;
+          font-weight: 600;
+        }
+      }
+      .selected{
+        background-color: #e9e9e78b;
+        font-weight: 600;
+      }
+    }
+  }
+  
+}
