--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -212,7 +212,6 @@
   width: 100%;
   left: 0;
   z-index: 99;
-  background-color: red;
   .MegaMenu{
     padding: 30px 70px;
     border-radius: 0px 0px 16px 16px;
@@ -242,7 +241,6 @@
       padding-right: 20px;
       a{
         padding:15px 5px;
-        text-transform: uppercase;
         color: var(--Colors-Pure-Black, #000);
         text-align: right;
         font-family: Roboto;
@@ -269,4 +267,9 @@
     }
   }
   
+}
+.FullImageSubItembBtn{
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
 }
