--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -1,3 +1,27 @@
+.RegionalDimensions{
+  width: 100%;
+  min-height: 100vh;
+  background-color: #001C29;
+  background-size: 65%;
+  background-position: center right;
+  background-repeat: no-repeat;
+  color:white;
+  p{
+    color: var(--Colors-Pure-White, #FFF);
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 120%;
+    margin-top: 20px;
+  }
+  a{
+    font-weight: 400;
+  }
+}
+
+
+
 .TraditionalSection{
   fill: rgba(217, 217, 217, 0.20);
   stroke-width: 2px;
