--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -34,6 +34,7 @@
   min-width: 230px;
   max-width: 260px;
   transition: 0.5s;
+  
   @media (max-width: '750px') {
     min-width: 180px;
     max-width: 180px;
@@ -61,6 +62,17 @@
     line-height: 140%; 
     margin-top: 17px;
     margin-bottom: 0px;
+  }
+  &.Small{
+    min-width: 160px;
+    max-width: 160px;
+    min-height: 190px;
+    img{
+      width: 45px;
+    }
+    p{
+      font-size: 16px;
+    }
   }
 }
 
