--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -151,7 +151,22 @@
       float: right;
     }
   }
-    
+    h3{
+      color: var(--Colors-Pure-Black, #000);
+      font-family: "Roboto Serif";
+      font-size: 22px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 120%; /* 26.4px */
+    }
+    p{
+      color: var(--Colors-Pure-Black, #000);
+      font-family: Roboto;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 300;
+      line-height: 160%; /* 25.6px */
+    }
 }
 
 .StoreisSection{
