--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -4,7 +4,7 @@
   transition: 0.4s;
   top:0;
   position: relative;
-
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.15);
   @media (max-width: '750px') {
     .SuperiorLinks{
       display: none !important;
@@ -240,8 +240,9 @@
     box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
     position: absolute;
     background: #F6F6F6;
-    left: 20%;
-    width: 60%;
+    left: 50%;
+    transform:translateX(-50%);
+    width: calc(81.25rem * 1);
     min-height: 40vh;
     h2{
       color: var(--Colors-Pure-Black, #000);
@@ -254,8 +255,9 @@
       text-align: center;
       display: flex;
       flex-direction: row;
-      align-items: center;
+      align-items: flex-start;
       justify-content: center;
+      text-align: left;
     }
     nav{
       width: 100%;
@@ -298,4 +300,16 @@
   position: absolute;
   right: 20px;
   bottom: 20px;
+}
+.halfImageContainer{
+  >div{
+    margin-bottom: 50px;
+  }
+  position: relative;
+  height: 100%;
+  .HalfImageSubItembBtn{
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+  }
 }
