--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -34,10 +34,13 @@
   min-width: 230px;
   max-width: 260px;
   transition: 0.5s;
-  
+  @media (max-width: '400px') {
+    min-width: 150px;
+    max-width: 150px;
+  }
   @media (max-width: '750px') {
-    min-width: 180px;
-    max-width: 180px;
+    min-width: 170px;
+    max-width: 150px;
     min-height: 170px;
     padding: 10px 5px !important;
     img{
