--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -3,13 +3,18 @@
   width: 100%;
   transition: 0.4s;
   top:0;
-  position: relative;
-  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.50);
   @media (max-width: '750px') {
     .SuperiorLinks{
       display: none !important;
     }
     .InfoNavContainer{
+      display: none !important;
+    }
+  }
+
+  .ScrolledButton{
+    @media (max-width: '750px') {
       display: none !important;
     }
   }
@@ -100,6 +105,42 @@
           display: none;
         }
       }
+    }
+  }
+}
+
+.ResponsiveMenuButton{
+  display: none;
+  @media (max-width: '750px') {
+    display: block;
+  }
+  
+}
+
+.ResponsiveMenu{
+  position:absolute;
+  left: 0;
+  top: 0;
+  min-height: 50vh;
+  width: 100%;
+  background-color: #F6F6F6;
+  z-index: 999;
+  border-radius: 0px 0px 16px 16px;
+  box-shadow: inset 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
+  nav{
+    padding: 40px 30px 0px 30px;
+    &.secondNav{
+      padding:20px 30px;
+    }
+    a{
+      width: 100%;
+      float: left;
+      margin-bottom: 24px;
+      font-family: Roboto;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
     }
   }
 }
@@ -234,16 +275,25 @@
   width: 100%;
   left: 0;
   z-index: 99;
+  &.Main{
+    z-index: 9999999;
+  }
   .MegaMenu{
     padding: 30px 70px;
     border-radius: 0px 0px 16px 16px;
-    box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: inset 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
     position: absolute;
     background: #F6F6F6;
     left: 50%;
     transform:translateX(-50%);
     width: calc(81.25rem * 1);
     min-height: 40vh;
+    @media (max-width: '750px') {
+      width: 100%;
+      overflow-y: scroll;
+      padding: 20px 40px;
+      max-height: 90vh;
+    }
     h2{
       color: var(--Colors-Pure-Black, #000);
       font-family: "Roboto Serif";
@@ -252,12 +302,16 @@
       margin: 0;
       font-weight: 700;
       line-height: 160%; /* 51.2px */
-      text-align: center;
+      text-align: left;
       display: flex;
       flex-direction: row;
       align-items: flex-start;
-      justify-content: center;
+      justify-content: flex-start;
       text-align: left;
+      @media (max-width: '750px') {
+        font-size: 22px;
+        text-align: left;
+      }
     }
     nav{
       width: 100%;
@@ -267,6 +321,10 @@
       margin-top: 20px;
       border-right: solid black 1px;
       padding-right: 20px;
+      @media (max-width: '750px') {
+        border-right: none;
+        padding: 0px;
+      }
       a{
         padding:15px 5px;
         color: var(--Colors-Pure-Black, #000);
@@ -287,10 +345,20 @@
           background-color: #e9e9e78b;
           font-weight: 600;
         }
+        @media (max-width: '750px') {
+          justify-content: flex-start;
+          text-align: left;
+        }
       }
       .selected{
         background-color: #e9e9e78b;
         font-weight: 600;
+      }
+      
+    }
+    .MegaMenuRightSection{
+      @media (max-width: '750px') {
+        display: none;
       }
     }
   }
