--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -348,6 +348,8 @@
         @media (max-width: '750px') {
           justify-content: flex-start;
           text-align: left;
+          font-size: 18px;
+          padding: 10px 0px;
         }
       }
       .selected{
