--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -373,13 +373,16 @@
 }
 .halfImageContainer{
   >div{
-    margin-bottom: 50px;
+    margin-bottom: 10px;
+    font-family: Roboto;
+font-size: 17px;
+font-style: normal;
+font-weight: 300;
+line-height: 160%;
   }
   position: relative;
   height: 100%;
   .HalfImageSubItembBtn{
-    position: absolute;
-    left: 10px;
-    bottom: 10px;
+    position: relative;
   }
 }
