--- a/_mantine.scss
+++ b/_mantine.scss
@@ -8,6 +8,10 @@ $mantine-breakpoint-md: '62em';
 $mantine-breakpoint-lg: '75em';
 $mantine-breakpoint-xl: '88em';
 
+.mantine-Modal-inner {
+  z-index: 99999999 !important;
+}
+
 @function rem($value) {
   @return #{math.div(math.div($value, $value * 0 + 1), 16)}rem;
 }
