--- a/src/styles/components/feed.module.scss
+++ b/src/styles/components/feed.module.scss
@@ -9,6 +9,9 @@
   background: var(--Greyscale-Surface-Default, #F3F3F2);
   box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
   padding: 16px;
+  @media (max-width: '750px') {
+    width: 100%;
+  }
   h3{
     color: var(--Colors-Pure-Black, #000);
     font-family: "Roboto Serif";
