--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -4,7 +4,7 @@
   transition: 0.4s;
   top:0;
   box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.50);
-  @media (max-width: '750px') {
+  @media (max-width: '1024px') {
     .SuperiorLinks{
       display: none !important;
     }
@@ -32,7 +32,7 @@
 }
 
   .ScrolledButton{
-    @media (max-width: '750px') {
+    @media (max-width: '1024px') {
       display: none !important;
     }
   }
@@ -87,6 +87,12 @@
             color: silver
           }
         }
+        .InfoNav{
+          a{
+            font-weight: 300;
+            font-size: 16px;
+          }
+        }
       }
     }
   }
@@ -129,7 +135,7 @@
 
 .ResponsiveMenuButton{
   display: none;
-  @media (max-width: '750px') {
+  @media (max-width: '1024px') {
     display: block;
   }
   
@@ -226,6 +232,23 @@
     &.Opened{
       display: flex;
     }
+  }
+}
+
+.Copyright{
+  background: #778899;
+  color: #ffffff;
+  padding: 7px;
+  width: 100%;
+  font-weight: 300;
+  float: left;
+  a{
+    font-weight: 300;
+    text-decoration: none;
+    color: white;
+    font-size: 12px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
 }
 
@@ -357,7 +380,6 @@
         flex-direction: row;
         gap: 10px;
         width: 100%;
-        align-items: center;
         justify-content: flex-end;
         &:hover{
           background-color: #e9e9e78b;
