--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -521,7 +521,10 @@
 }
 
 .RelatedArticleLink{
+  background-color: #F3F3F2 ;
   color:#006CB0;
+  padding: 5px 15px;
+  border-radius: 8px;
   text-align: left;
   width: 100%;
 }
