--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -70,16 +70,20 @@
   margin-top: 60px;
   z-index: 999;
 }
+.DescriptionThin{
+  font-weight: 300;
+}
 .TitleWithIcon{
   @media (max-width: '750px') {
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    font-size: 26px;
   }
   display: flex;
   gap: 5px;
   font-family: "Roboto Serif";
-  font-size: 36px;
+  font-size: 34px;
   font-style: normal;
   font-weight: 800;
   line-height: normal;
