--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -73,17 +73,54 @@
 .DescriptionThin{
   font-weight: 300;
 }
+
+.BlueTitle{
+  font-family: Roboto Serif;
+  font-size: 2.2rem;
+  margin-top: 0px;
+  font-weight: 700;
+  line-height: 55.2px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #006CB0;
+  &.small{
+    font-size: 1.5rem;
+  }
+}
+.Description{
+  font-family: Roboto;
+  font-size: 1.1rem;
+  font-weight: 400;
+  line-height: 2rem;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  text-align: justify;
+}
+
 .TitleWithIcon{
   @media (max-width: '750px') {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     font-size: 26px;
+    &.small{
+      font-size: 24px;
+      img{
+        width: 28px;
+      }
+    }
   }
   display: flex;
   gap: 5px;
   font-family: "Roboto Serif";
   font-size: 34px;
+  &.small{
+    font-size: 24px;
+    img{
+      width: 28px;
+    }
+  }
   font-style: normal;
   font-weight: 800;
   line-height: normal;
