--- a/src/styles/components/feed.module.scss
+++ b/src/styles/components/feed.module.scss
@@ -5,6 +5,7 @@
 .PostItem{
   width: 30%;
   border-radius: 16px;
+  cursor: pointer;
   min-height: 397px;
   background: var(--Greyscale-Surface-Default, #F3F3F2);
   box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
