--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -314,6 +314,7 @@
       color: var(--Greyscale-Text-Body, #53524B);
       font-family: Roboto;
       font-size: 16px;
+      color: black;
       font-style: normal;
       font-weight: 400;
       line-height: normal;
