--- a/src/styles/components/resources.module.scss
+++ b/src/styles/components/resources.module.scss
@@ -86,6 +86,10 @@
   @media (max-width: '750px') {
     width: 100%;
   }
+  .Tags{
+    width: 100%;
+    margin-top: 20px;
+  }
   &.Row{
     width: 100%;
     min-height: 244px;
