--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -403,6 +403,12 @@
   } 
   form{
     width: 100%;
+    .InputForm{
+      width: 30%;
+      @media (max-width: '750px') {
+        width: 60%;
+      }
+    }
     @media (max-width: '750px') {
       width: 100%;
       button{
@@ -428,6 +434,11 @@
 
   @media (max-width: '750px') {
     flex-direction: row;
+    &.center{
+      flex-direction: column;
+      align-content: center;
+      align-items: center;
+    }
     justify-content: center;
     align-content: flex-start;
     text-align: center;
