feature: dimension new layout

--- a/src/styles/components/multitab.module.scss
+++ b/src/styles/components/multitab.module.scss
@@ -1,3 +1,10 @@
+.DimensionsMultitabContainer{
+  background-color: #C3E995;
+  min-height: 300px;
+  width: 100%;
+  float: left;
+}
+
 .MultitabContainer{
   width: 100%;
   min-height: 200px;
