features: events country, country name, fix: title with icon, logo link when country page

--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -215,6 +215,7 @@
         font-style: normal;
         font-weight: 200;
         line-height: normal;
+        text-transform: capitalize;
       }
     }
   }
