fix responsive, menu, add tms

--- a/src/styles/components/multitab.module.scss
+++ b/src/styles/components/multitab.module.scss
@@ -18,7 +18,11 @@
     &::before{
       border-bottom: #006CB0 solid 2px;
     }
-   
+    @media (max-width: '950px') {
+       &::before{
+      border-bottom: none;
+      }
+    }
   }
   .TabContent{
     font-family: Roboto;
