--- a/src/styles/components/slider.module.scss
+++ b/src/styles/components/slider.module.scss
@@ -111,7 +111,7 @@
 
 .CountryRss{
   padding:40px 0px;
-  background-color: #cdd3e7;
+  background: linear-gradient(135deg, #ecd3ba, #6990c2);
   h4{
     font-family: "Roboto Serif";
     font-size: 1.5rem;
