--- a/src/styles/components/video.module.scss
+++ b/src/styles/components/video.module.scss
@@ -83,9 +83,15 @@
   .RelatedVideosSectionFlex{
     .MainVideo{
       width: 60%;
+       @media (max-width: '1000px')  {
+        width: 100%;
+      }
     }
     .SideVideos{
       width: 40%;
+      @media (max-width: '1000px')  {
+        width: 100%;
+      }
     }
   }
 }
@@ -134,8 +140,9 @@
     background-size: cover;
     background-position: center center;
     position: relative;
-    @media (max-width: '750px') {
-      width: 100%;
+    @media (max-width: '1000px') {
+      width: 50%;
+      height: 200px;
     }
     &::before{
       content: "";
