--- a/src/styles/components/cards.module.scss
+++ b/src/styles/components/cards.module.scss
@@ -16,10 +16,14 @@
   max-width: 30%;
   background-color: #F3F3F2;
   border-radius: 16px;
-  padding: 5px 20px;
+  padding: 10px 20px;
   max-height: 130px;
   cursor: pointer;
+  transition: 0.5s;
   box-shadow: 0px 4px 16px 0px #00000040;
+  &:hover{
+    box-shadow: 0px 5px 20px 0px rgb(0 0 0 / 40%);
+  }
   .cardContent{
     font-family: Roboto Serif;
     font-weight: 600;
@@ -33,5 +37,20 @@
       width: 100%;
       max-width: 80px;
     }
+  }
+  @media (max-width: '750px')  {
+    flex: 1;
+    width: 100%;
+    max-width: 100%;
+    min-height: 120px;
+    margin-bottom: 20px;
+  }
+   @media (min-width: '750px') and (max-width: '1000px')  {
+    flex: 1;
+    width: 40%;
+    min-width: 40%;
+    max-width: 40%;
+    min-height: 120px;
+    margin-bottom: 20px;
   }
 }
