--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -1,9 +1,42 @@
+.fixSearchForm{
+  width: 100%;
+  height: 70vh;
+}
+
+.TmsItem{
+  max-width: 30%;
+  min-width: 30%;
+  border-radius: 16px;
+  background: #F3F3F2;
+  box-shadow: 0px 0px 17px 0px rgb(0 0 0 / 31%);
+  padding: 10px; 
+  margin-top: 10px;
+  margin-bottom: 40px;
+  @media (max-width: '1000px') {
+    max-width: 100%;
+    min-width: 100%;
+  }
+  .TmsImage{
+    width: 100%;
+    height: 300px;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 8px;
+  }
+  h4{
+    font-size: 1.3rem;
+    margin-bottom: 0px;
+    margin-top: 15px;
+  }
+}
+
 .HeroSearch{
   width: 100%;
   height: 85vh;
   position: relative;
   @media (max-width: '750px') {
-    height: 86vh;
+    height: 90vh;
   }
 }
 
