--- a/src/styles/components/forms.module.scss
+++ b/src/styles/components/forms.module.scss
@@ -79,6 +79,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    margin-bottom: 10px;
   }
   h5{
     color: var(--Colors-Pure-Black, #000);
