--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -424,16 +424,26 @@
 
 }
 
-.TitleWithIcon{
-  display: flex;
-  gap: 5px;
-  font-family: "Roboto Serif";
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: normal;
 
-  @media (max-width: '750px') {
+
+.TitleWithIcon{
+    text-transform: capitalize;
+    padding-left: 40px;
+    background-image: url('../../../public/local/svg/simbol.svg');
+    background-position: left center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    font-family: "Roboto Serif";
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    max-width: 50vw;
+    @media (max-width: '750px') {
+      width: 100%;
+      max-width: 100%;
+    }
+    @media (max-width: '750px') {
     flex-direction: row;
     &.center{
       flex-direction: column;
@@ -449,6 +459,8 @@
     }
   }
 }
+
+
 
 .RelatedArticleItem{
   display: flex;
